[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
babel_filter = { version = "0.1.0", path = "../babel_filter" }
camino = "1.1.6"
clap = { version = "4.5.1", features = ["derive"] }
